--- a/Main/WebApp/Index.html
+++ b/Main/WebApp/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UnconventionalMTG Archive</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -38,3 +38,4 @@
 </body>
 
 </html>
+
