--- a/Main/WebApp/sets/index.html
+++ b/Main/WebApp/sets/index.html
@@ -18,9 +18,7 @@
     </div>
 
     <main>
-        <section class="grid" id="sets-grid">
-            <!-- JS will populate this -->
-        </section>
+        <section class="grid" id="sets-grid"></section>
     </main>
 
     <footer>
@@ -30,31 +28,24 @@
     <script>
         async function loadSets() {
             try {
-                const apiUrl = "https://api.github.com/repos/pendulumpower/UnconventionalMTG/contents/Main/WebApp/sets";
+                const response = await fetch('sets.json');
+                if (!response.ok) throw new Error('Could not load sets.json');
+                const data = await response.json();
 
-                const response = await fetch(apiUrl);
-                if (!response.ok) throw new Error("GitHub API error");
-                const items = await response.json();
+                const grid = document.getElementById('sets-grid');
 
-                const sets = items
-                    .filter(item => item.type === "dir")
-                    .map(item => item.name)
-                    .filter(name => name !== "Icons"); // ignore Icons
-
-                const grid = document.getElementById("sets-grid");
-
-                sets.forEach(folder => {
-                    const card = document.createElement("a");
-                    card.className = "card";
-                    card.href = `${folder}/index.html`;
+                data.sets.forEach(set => {
+                    const card = document.createElement('a');
+                    card.className = 'card';
+                    card.href = `${encodeURIComponent(set.id)}/index.html`;
                     card.innerHTML = `
-                        <h2>${folder}</h2>
-                        <p>Open this custom MTG set</p>
+                        <h2>${set.title}</h2>
+                        <p>${set.description}</p>
                     `;
                     grid.appendChild(card);
                 });
             } catch (err) {
-                console.error("Error loading sets:", err);
+                console.error(err);
             }
         }
 
