--- a/sets/Hollow Knight Silksong/index.html
+++ b/sets/Hollow Knight Silksong/index.html
@@ -28,40 +28,39 @@
     </footer>
 
     <script>
-        async function loadCards() {
-            try {
-                const parts = window.location.pathname.split("/").filter(Boolean);
-                const setName = parts[parts.length - 2]; // .../sets/<SetName>/index.html
+async function loadCards() {
+    try {
+        // Determine the set folder name from the URL
+        const parts = window.location.pathname.split('/').filter(Boolean);
+        const setName = parts[parts.length - 1]; // folder containing this index.html
 
-                const apiUrl = `https://api.github.com/repos/pendulumpower/UnconventionalMTG/contents/Main/WebApp/sets/${encodeURIComponent(setName)}/Cards`;
+        // Load the card manifest from the correct path
+        const response = await fetch(`./cards.json`);
+        if (!response.ok) throw new Error("Could not load cards.json");
+        const data = await response.json();
 
-                const response = await fetch(apiUrl);
-                if (!response.ok) throw new Error("GitHub API error");
-                const items = await response.json();
+        const grid = document.getElementById("card-grid");
 
-                const images = items
-                    .filter(item => item.type === "file")
-                    .filter(item => item.name.match(/\.(png|jpe?g|webp|gif)$/i));
+        data.cards.forEach(card => {
+            const img = document.createElement("img");
 
-                const grid = document.getElementById("card-grid");
+            // Correct path to the Cards folder
+            img.src = `./Cards/${encodeURIComponent(card.file)}`;
+            img.alt = card.file;
 
-                images.forEach(img => {
-                    const el = document.createElement("img");
-                    el.src = img.download_url;
-                    el.alt = img.name;
+            img.onclick = () => {
+                window.location.href = `viewer.html?img=${encodeURIComponent(card.file)}`;
+            };
 
-                    el.onclick = () => {
-                        window.location.href = `viewer.html?img=${encodeURIComponent(img.name)}`;
-                    };
+            grid.appendChild(img);
+        });
 
-                    grid.appendChild(el);
-                });
-            } catch (err) {
-                console.error("Error loading cards:", err);
-            }
-        }
+    } catch (err) {
+        console.error("Error loading cards:", err);
+    }
+}
 
-        loadCards();
-    </script>
+loadCards();
+</script>
 </body>
 </html>
