--- a/sets/Hollow Knight Silksong/index.html
+++ b/sets/Hollow Knight Silksong/index.html
@@ -6,23 +6,32 @@
     <title>Set – UnconventionalMTG Archive</title>
     <link rel="stylesheet" href="../../style.css">
     <style>
-        /* Card flip container */
+        /* Grid styling */
+        #card-grid {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            justify-content: flex-start;
+        }
+
+        /* Card container for flipping */
         .card {
+            width: 200px;   /* Adjust to your card size */
+            height: 280px;
             perspective: 1000px;
-            display: inline-block;
-            margin: 5px;
         }
 
         .card-inner {
-            position: relative;
-            width: 200px;  /* Adjust as needed */
-            height: 280px; /* Adjust as needed */
+            width: 100%;
+            height: 100%;
             transition: transform 0.6s;
             transform-style: preserve-3d;
+            cursor: pointer;
         }
 
-        .card:hover .card-inner {
-            transform: rotateY(10deg) rotateX(5deg); /* subtle tilt */
+        /* Flip animation class */
+        .flipped {
+            transform: rotateY(180deg);
         }
 
         .card img {
@@ -33,6 +42,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.3);
         }
+
     </style>
 </head>
 
@@ -67,7 +77,7 @@
                 const data = await response.json();
                 grid.textContent = "";
 
-                // Group cards by base ID (before the decimal)
+                // Group cards by base ID
                 const dfcMap = {};
                 data.cards.forEach(card => {
                     const baseIdMatch = card.file.match(/^(\d+)\./);
@@ -77,7 +87,6 @@
                     dfcMap[baseId].push(card);
                 });
 
-                // Create card elements
                 Object.values(dfcMap).forEach(cards => {
                     const cardContainer = document.createElement("div");
                     cardContainer.className = "card";
@@ -94,24 +103,25 @@
                     img.tabIndex = 0;
                     img.role = "button";
 
-                    // Click to flip or open viewer
-                    img.onclick = () => {
+                    inner.appendChild(img);
+                    cardContainer.appendChild(inner);
+                    grid.appendChild(cardContainer);
+
+                    const flipCard = () => {
                         if (cards.length > 1) {
                             faceIndex = (faceIndex + 1) % cards.length;
                             img.src = `./Cards/${encodeURIComponent(cards[faceIndex].file)}`;
                             img.alt = cards[faceIndex].name ?? cards[faceIndex].file;
+                            inner.classList.toggle("flipped");
                         } else {
                             window.location.href = `viewer.html?img=${encodeURIComponent(cards[0].file)}`;
                         }
                     };
 
-                    img.onkeydown = (e) => {
-                        if (e.key === "Enter") img.onclick();
+                    img.onclick = flipCard;
+                    img.onkeydown = e => {
+                        if (e.key === "Enter") flipCard();
                     };
-
-                    inner.appendChild(img);
-                    cardContainer.appendChild(inner);
-                    grid.appendChild(cardContainer);
                 });
 
             } catch (err) {
