--- a/sets/Hollow Knight Silksong/index.html
+++ b/sets/Hollow Knight Silksong/index.html
@@ -5,45 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Set – UnconventionalMTG Archive</title>
     <link rel="stylesheet" href="../../style.css">
-    <style>
-        /* Grid styling */
-        #card-grid {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            justify-content: flex-start;
-        }
-
-        /* Card container for flipping */
-        .card {
-            width: 200px;   /* Adjust to your card size */
-            height: 280px;
-            perspective: 1000px;
-        }
-
-        .card-inner {
-            width: 100%;
-            height: 100%;
-            transition: transform 0.6s;
-            transform-style: preserve-3d;
-            cursor: pointer;
-        }
-
-        /* Flip animation class */
-        .flipped {
-            transform: rotateY(180deg);
-        }
-
-        .card img {
-            width: 100%;
-            height: 100%;
-            display: block;
-            backface-visibility: hidden;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-        }
-
-    </style>
 </head>
 
 <body>
@@ -73,55 +34,34 @@
 
             try {
                 const response = await fetch("./cards.json");
-                if (!response.ok) throw new Error("Could not load cards.json");
+                if (!response.ok) {
+                    throw new Error("Could not load cards.json");
+                }
+
                 const data = await response.json();
                 grid.textContent = "";
 
-                // Group cards by base ID
-                const dfcMap = {};
                 data.cards.forEach(card => {
-                    const baseIdMatch = card.file.match(/^(\d+)\./);
-                    const baseId = baseIdMatch ? baseIdMatch[1] : card.file;
-
-                    if (!dfcMap[baseId]) dfcMap[baseId] = [];
-                    dfcMap[baseId].push(card);
-                });
-
-                Object.values(dfcMap).forEach(cards => {
-                    const cardContainer = document.createElement("div");
-                    cardContainer.className = "card";
-
-                    const inner = document.createElement("div");
-                    inner.className = "card-inner";
-
-                    let faceIndex = 0;
-
                     const img = document.createElement("img");
-                    img.src = `./Cards/${encodeURIComponent(cards[faceIndex].file)}`;
-                    img.alt = cards[faceIndex].name ?? cards[faceIndex].file;
+
+                    img.src = `./Cards/${encodeURIComponent(card.file)}`;
+                    img.alt = card.name ?? card.file;
                     img.loading = "lazy";
                     img.tabIndex = 0;
                     img.role = "button";
 
-                    inner.appendChild(img);
-                    cardContainer.appendChild(inner);
-                    grid.appendChild(cardContainer);
+                    img.onclick = () => {
+                        window.location.href =
+                            `viewer.html?img=${encodeURIComponent(card.file)}`;
+                    };
 
-                    const flipCard = () => {
-                        if (cards.length > 1) {
-                            faceIndex = (faceIndex + 1) % cards.length;
-                            img.src = `./Cards/${encodeURIComponent(cards[faceIndex].file)}`;
-                            img.alt = cards[faceIndex].name ?? cards[faceIndex].file;
-                            inner.classList.toggle("flipped");
-                        } else {
-                            window.location.href = `viewer.html?img=${encodeURIComponent(cards[0].file)}`;
+                    img.onkeydown = (e) => {
+                        if (e.key === "Enter") {
+                            img.onclick();
                         }
                     };
 
-                    img.onclick = flipCard;
-                    img.onkeydown = e => {
-                        if (e.key === "Enter") flipCard();
-                    };
+                    grid.appendChild(img);
                 });
 
             } catch (err) {
